logs/dag_id=currency_parsing/run_id=scheduled__2009-02-23T000000+0000/task_id=fetch_data/attempt=15.log
[2024-04-13T12:46:44.213+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: currency_parsing.fetch_data scheduled__2009-02-23T00:00:00+00:00 [queued]>
[2024-04-13T12:46:44.227+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: currency_parsing.fetch_data scheduled__2009-02-23T00:00:00+00:00 [queued]>
[2024-04-13T12:46:44.227+0000] {taskinstance.py:2193} INFO - Starting attempt 15 of 15
[2024-04-13T12:46:44.248+0000] {taskinstance.py:2214} INFO - Executing <Task(PythonOperator): fetch_data> on 2009-02-23 00:00:00+00:00
[2024-04-13T12:46:44.253+0000] {standard_task_runner.py:60} INFO - Started process 616 to run task
[2024-04-13T12:46:44.259+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'currency_parsing', 'fetch_data', 'scheduled__2009-02-23T00:00:00+00:00', '--job-id', '139', '--raw', '--subdir', 'DAGS_FOLDER/currency_parsing.py', '--cfg-path', '/tmp/tmpgxp6rrdy']
[2024-04-13T12:46:44.263+0000] {standard_task_runner.py:88} INFO - Job 139: Subtask fetch_data
[2024-04-13T12:46:44.336+0000] {task_command.py:423} INFO - Running <TaskInstance: currency_parsing.fetch_data scheduled__2009-02-23T00:00:00+00:00 [running]> on host e8a1e0443283
[2024-04-13T12:46:44.453+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='currency_parsing' AIRFLOW_CTX_TASK_ID='fetch_data' AIRFLOW_CTX_EXECUTION_DATE='2009-02-23T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='15' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2009-02-23T00:00:00+00:00'
[2024-04-13T12:46:44.472+0000] {logging_mixin.py:188} INFO - ['АВСТРАЛИЙСКИЙ ДОЛЛАР', 'AUD', '95.29', '1', 'UP', '0.00', datetime.date(2009, 2, 23)]
[2024-04-13T12:46:44.473+0000] {logging_mixin.py:188} INFO - ['currency', 'title', 'rate', 'quantity', 'index', 'change', 'date']
[2024-04-13T12:46:44.485+0000] {base.py:83} INFO - Using connection ID 'dwh' for task execution.
[2024-04-13T12:46:44.492+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/currency_parsing.py", line 34, in fetch_data
    dwh_hook.insert_rows(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 565, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
LINE 1: ... (currency, title, rate, quantity, index, change, date) VALU...
                                                             ^

[2024-04-13T12:46:44.510+0000] {taskinstance.py:1149} INFO - Marking task as FAILED. dag_id=currency_parsing, task_id=fetch_data, execution_date=20090223T000000, start_date=20240413T124644, end_date=20240413T124644
[2024-04-13T12:46:44.529+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 139 for task fetch_data (INSERT has more target columns than expressions
LINE 1: ... (currency, title, rate, quantity, index, change, date) VALU...
                                                             ^
; 616)
[2024-04-13T12:46:44.554+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-04-13T12:46:44.645+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
